--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,18 +1,15 @@
-section{
+.aboutMe{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     min-height: 100vh;
     padding: 0rem 10% 2rem;
     font-family: 'Ubuntu Mono', monospace;
-    background-image: url("../../Images/bg.jpeg");
+    background-image: url("https://raw.githubusercontent.com/safak/youtube23/3d-portfolio/public/img/bg.jpeg");
     border-bottom-left-radius: 10%;
     border-bottom-right-radius: 10%;
     border-Top-left-radius: 10%;
     border-top-right-radius: 10%;
-}
-
-.aboutMe{
-   display: flex;
-    justify-content: center;
-    align-items: center;
 }
 .about-content h3 {
     font-size: 50px;
