--- a/src/components/Skill/Skill.css
+++ b/src/components/Skill/Skill.css
@@ -1,6 +1,6 @@
  .box-geometry canvas {
-    width: 35rem;
-    height: 40rem;
+    width: 54vm;
+    height: 64vh;
     display: block;
     top: 0;
     bottom: 0;
