--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,6 +3,7 @@
     padding: 3vmax;
     display: grid;
     grid-template-columns: 1fr 200px;
+    font-family: 'Ubuntu Mono', monospace;
     border-Top-left-radius: 10%;
     border-top-right-radius: 10%;
     margin-top: 5px;
@@ -13,19 +14,23 @@
     width: 120px;
     margin-bottom: 20px;
     padding: 10px 0;
+    font-family: 'Ubuntu Mono', monospace;
   }
   .footer > div > p {
     color: white;
     width: 60%;
+    font-family: 'Ubuntu Mono', monospace;
   }
   
   .footer > div > h6 {
     color: white;
+    font-family: 'Ubuntu Mono', monospace;
     padding: 10px 0;
   }
   
   .footer > div:last-child {
     display: flex;
+    font-family: 'Ubuntu Mono', monospace;
     flex-direction: column;
     align-items: center;
   }
@@ -58,6 +63,7 @@
     display: block;
     margin: 2vmax 0;
     border: 1px solid white;
+    font-family: 'Ubuntu Mono', monospace;
     transition: all 0.5s;
   }
   
