--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,12 +6,19 @@
     border-bottom-left-radius: 10%;
     border-bottom-right-radius: 10%;
 }
+
 h1 {
     color: rgb(254, 254, 254);
     font-size: 45px;
     font-family: 'Ubuntu Mono', monospace;
     text-align: center;
+    position: absolute;
+        top: 600px;
+        left: 100px;
+        z-index: 1;
   }
+
+ 
 
 .homeSkills {
     background-color: #f5f5f5;
@@ -25,6 +32,4 @@ h1 {
     justify-content: space-around;
     flex-direction: column;
 }
-
-
 
