--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -7,6 +7,8 @@
     font-family: 'Ubuntu Mono', monospace;
     background-image: url("https://raw.githubusercontent.com/safak/youtube23/3d-portfolio/public/img/bg.jpeg");
     border-radius: 10%;
+    margin-top: 0.1rem;
+    
   }
   
   .about-content {
