--- a/src/components/Skill/Skill.css
+++ b/src/components/Skill/Skill.css
@@ -77,6 +77,7 @@
       flex-direction: row;
       min-height: 100vh;
       padding: 1rem 10%;
+      margin-top: 0.4rem;
   }
   .skill-content {
       width: 50%;
