--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -10,6 +10,7 @@
 h1 {
     color: rgb(254, 254, 254);
     font-size: 45px;
+    overflow: hidden;
     font-family: 'Ubuntu Mono', monospace;
     text-align: center;
     position: absolute;
